--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,21 @@
+.app {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .appContainer {
+  max-width: 720px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   margin-top: -26px;
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
 }
