--- a/src/components/CreateTask.module.css
+++ b/src/components/CreateTask.module.css
@@ -64,6 +64,24 @@
 }
 
 .inputTask:hover {
- background-color: var(--gray-400);
+  background-color: var(--gray-400);
 }
 
+@media (max-width: 720px) {
+  .createTaskForm   {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80vw;
+  }
+  .createTaskContainer {
+    display: flex;
+    justify-content: center;
+  }
+  .createTaskButton{
+    margin-top: 16px;
+  }
+  .inputTask {
+    width: 100%;
+  }
+}
