--- a/src/components/Empty.module.css
+++ b/src/components/Empty.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 720px;
+  width: 100%;
   padding: 30px;
   border-top: 1px solid var(--gray-400);
 }
