--- a/src/components/CreateTask.module.css
+++ b/src/components/CreateTask.module.css
@@ -72,7 +72,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80vw;
+    width: 100%;
   }
   .createTaskContainer {
     display: flex;
